[gd_scene load_steps=4 format=3 uid="uid://d0bvbc0rq3nh"]

[ext_resource type="Script" path="res://main.gd" id="1_83bbd"]
[ext_resource type="Script" path="res://playback_controls.gd" id="2_v6p8h"]
[ext_resource type="PackedScene" uid="uid://dlp7ecevwcuc3" path="res://orbital_display.tscn" id="3_74eu5"]

[node name="main" type="Node2D"]
script = ExtResource("1_83bbd")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(0, 36)
size = Vector2i(350, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="OpenFileButton" type="Button" parent="."]
offset_left = 2.0
offset_top = -1.0
offset_right = 81.0
offset_bottom = 30.0
text = "Open folder"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="PlaybackControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 101.0
offset_top = 134.0
offset_right = 304.0
offset_bottom = 176.0
script = ExtResource("2_v6p8h")

[node name="VSlider" type="VSlider" parent="PlaybackControls"]
layout_mode = 0
offset_left = -13.0
offset_top = -30.0
offset_right = 3.0
offset_bottom = 58.0
min_value = -24.0
max_value = 24.0

[node name="PrevButton" type="Button" parent="PlaybackControls"]
layout_mode = 0
offset_left = 19.0
offset_top = 2.0
offset_right = 62.0
offset_bottom = 33.0
text = "Prev"

[node name="PlayButton" type="Button" parent="PlaybackControls"]
layout_mode = 0
offset_left = 75.0
offset_top = 2.0
offset_right = 116.0
offset_bottom = 33.0
text = "Play"

[node name="NextButton" type="Button" parent="PlaybackControls"]
layout_mode = 0
offset_left = 131.0
offset_top = 2.0
offset_right = 176.0
offset_bottom = 33.0
text = "Next"

[node name="OrbitalDisplay" parent="." instance=ExtResource("3_74eu5")]
position = Vector2(112, 120)

[node name="TitleName" type="Label" parent="."]
offset_left = 88.0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 88.0
text = "Audio displayed here"

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="OpenFileButton" to="." method="_on_open_file_button_pressed"]
[connection signal="drag_ended" from="PlaybackControls/VSlider" to="." method="_on_v_slider_drag_ended"]
[connection signal="value_changed" from="PlaybackControls/VSlider" to="." method="_on_v_slider_value_changed"]
[connection signal="pressed" from="PlaybackControls/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="PlaybackControls/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PlaybackControls/PlayButton" to="PlaybackControls" method="_on_play_button_pressed"]
[connection signal="pressed" from="PlaybackControls/NextButton" to="." method="_on_next_button_pressed"]
